@@ -2,6 +2,8 @@ maven-debian-helper (1.6.7) UNRELEASED; urgency=medium
 
   * The optional Maven dependencies are now suggested and not recommended
     in the package generated by mh_make
+  * The optional test dependencies are no longer added to the
+    ${maven:OptionalDepends} substitution variable
   * The generated Vcs-* fields now refer to Git instead of Subversion
     (Closes: #639338)
   * Added com.googlecode.maven-gcu-plugin:maven-gcu-plugin to the ignored
